--- a/pages/about.html
+++ b/pages/about.html
@@ -35,14 +35,14 @@ var _hmt = _hmt || [];
         </button>
         <div class="collapse navbar-collapse justify-content-md-center" id="navbarsExample08">
           <ul class="navbar-nav">
-            <li class="nav-item"><a class="nav-link" href="https://qiantongLeung.github.io">首页</a></li>
+            <li class="nav-item"><a class="nav-link" href="https://catbabe.github.io">首页</a></li>
             <li class="dropdown">
               <a class="nav-link dropdown-toggle" href="#" id="web" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Web技术</a>
               <div class="dropdown-menu" aria-labelledby="web">
-                <a class="dropdown-item" href="https://qiantongLeung.github.io/ueo/">用户体验优化</a>
+                <a class="dropdown-item" href="https://catbabe.github.io/ueo/">用户体验优化</a>
               </div>
             </li>
-            <li class="nav-item"><a class="nav-link" href="https://qiantongLeung.github.io/about/">关于我</a></li>
+            <li class="nav-item"><a class="nav-link" href="https://catbabe.github.io/about/">关于我</a></li>
           </ul>
         </div>
       </nav>
